# HUAWEI-Codecraft-2019

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  test.sh
SDK/SDK_C++/CodeCraft-2019/: CMakeLists.txt  CodeCraft-2019.cpp
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  basic_types.cc  basic_types.h
test/: CMakeLists.txt  test_codecraft.cc
